<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:id="@+id/dataset_title_text"
            android:text="@string/default_dataset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    <TextView
            android:id="@+id/dataset_prefix_text"
            android:text="@string/default_dataset_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    <Button
            android:id="@+id/dataset_update_button"
            android:text="@string/update_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    <Button
            android:id="@+id/dataset_delete_button"
            android:text="@string/delete_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
</LinearLayout>
