<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/dataset_element_title_text"
            android:text="@string/default_dataset_element_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    <TextView
            android:id="@+id/dataset_element_value_text"
            android:text="@string/default_dataset_element_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    <Button
            android:id="@+id/dataset_element_update_button"
            android:text="@string/update_button_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    <Button
            android:id="@+id/dataset_element_delete_button"
            android:text="@string/delete_button_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
</LinearLayout>
