<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        tools:context=".dataset.DatasetActivity">

    <Button
            android:id="@+id/new_dataset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_dataset_label"/>
    <TextView
            android:id="@+id/datasets_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datasets_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
    />
    <ListView
            android:id="@+id/dataset_list"
            android:layout_width="match_parent"
            android:layout_height="200dp"
    />
    <LinearLayout
            android:id="@+id/data_set_elements_list_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <Button
                android:id="@+id/new_data_element_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_dataset_element_button_label"/>
        <TextView
                android:id="@+id/dataset_elements_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dataset_elements_text"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
        />
        <ListView
                android:id="@+id/dataset_elements_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>
